--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <h1>Эдуард Курносов</h1>
       <h2>Разработчик на Ruby on Rails</h2>
       <ul >
-        <li>skype: edwark1</li>
-        <li>telegram: @edwardkv</li>
-        <li>email: edwardkv@gmail.com</li>
+        <li>skype: <a href="skype:edwark1">edwark1</a></li>
+        <li>telegram: <a href="tg://resolve?domain=@edwardkv">@edwardkv</a></li>
+        <li>email: <a href="mailto:edwardkv@gmail.com">edwardkv@gmail.com</a></li>
         <li>Россия, Ульяновск</li>
       </ul>
     </div>
