Improve view of page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CV Eduard Kurnosov</title>
 
   <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic'
@@ -9,17 +10,18 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <div class="container">
 
   <div class="row">
-    <div class="three columns">
-      <img src="images/i.jpg" width="200" alt="photo"/>
+    <div class="left_div  avatar">
+      <img src="images/i2.jpg" class="ava" width="200" alt="photo"/>
     </div>
-    <div class="nine columns">
+
+    <div class="right_div">
       <h1>Эдуард Курносов</h1>
       <h2>Разработчик на Ruby on Rails</h2>
       <ul >
@@ -29,7 +31,6 @@
         <li>Россия, Ульяновск</li>
       </ul>
     </div>
-
   </div>
 
   <div class="row">
@@ -41,7 +42,7 @@
     <h3>Навыки</h3>
 
     <ul>
-      <li>Ruby, Ruby on Rails - написание, доработка учебных приложений</li>
+      <li>Ruby, Ruby on Rails &ndash; написание, доработка учебных приложений</li>
       <li>MySql</li>
       <li>PHP</li>
       <li>JavaScript</li>
@@ -59,72 +60,61 @@
     <h3>Знания языков:</h3>
 
     <ul>
-      <li>Русский - родной</li>
-      <li>Английский - чтение документации</li>
+      <li>Русский &ndash; родной</li>
+      <li>Английский &ndash; чтение документации</li>
     </ul>
-
 
     <p>
     Женат. Двое детей.
     </p>
 
     <p>
-    Люблю активный отдых, зож, велосипед.
+    Хобби: активный отдых, зож, велосипед.
     </p>
-
   </div>
 
   <div class="row">
     <h2>Опыт работы в ИТ</h2>
     <p>Опыт работы ИТ более 15 лет.</p>
     <ul>
-      <li>Июль 2018 — по настоящее время. Элементс Платформ». <a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer"></a>
+      <li>Июль 2018 &ndash; по настоящее время. Элементс Платформ». <a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer"></a>
         Создание и поддержка интернет магазинов.
 
       </li>
-      <li>Январь 2006 — Июнь 2018 (12 лет и 6 месяцев) Паллант-Мобайл. Cоздание и поддержка интернет магазинов, маркетплейс, сервисов, справочников.</li>
+      <li>Январь 2006 &ndash; Июнь 2018 (12 лет и 6 месяцев) Паллант&ndash;Мобайл. Cоздание и поддержка интернет магазинов, маркетплейс, сервисов, справочников.</li>
+    </ul>
+  </div>
+
+  <div class="row">
+    <h2>Портфолио</h2>
+    <p>Бэкенд &ndash; разработка функционала, интеграция дизайна по требованию заказчика.</p>
+    <ul>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://shop.kp.ru/">https://shop.kp.ru/</a> &ndash; магазин книг Комсомольская правда.
+      <li><a target="_blank" rel="noopener noreferrer" href="https://mbtshoes.ru/">https://mbtshoes.ru/</a> &ndash; магазин бренда обуви MBT.
+      <li><a target="_blank" rel="noopener noreferrer" href="https://ofisarium.ru/">https://ofisarium.ru/</a> &ndash; розничный магазин канцтоваров.
+      <li><a target="_blank" rel="noopener noreferrer" href="http://kancelyarim.ru/">http://kancelyarim.ru/</a> &ndash; розничный магазин канцтоваров.
+      <li><a target="_blank" rel="noopener noreferrer" href="http://planeta35.ru/">http://planeta35.ru/</a> &ndash; оптовый магазин канцтоваров.
+      <li><a target="_blank" rel="noopener noreferrer" href="https://www.directmedia.ru/">https://www.directmedia.ru/</a> &ndash; магазин электронных книг.
+      <li><a target="_blank" rel="noopener noreferrer" href="http://www.ladyshopping.ru/">http://www.ladyshopping.ru/</a> &ndash; маркетплейс одежды для женщин.
     </ul>
   </div>
 
  <div class="row">
-    <h2>Портфолио</h2>
-    <p>Бэкенд - разработка функционала, интеграция дизайна по требованию заказчика.</p>
-    <ul>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://shop.kp.ru/">https://shop.kp.ru/</a> - магазин книг Комсомольская правда.
-      <li><a target="_blank" rel="noopener noreferrer" href="https://mbtshoes.ru/">https://mbtshoes.ru/</a> - магазин бренда обуви MBT.
-      <li><a target="_blank" rel="noopener noreferrer" href="https://ofisarium.ru/">https://ofisarium.ru/</a> - розничный магазин канцтоваров.
-      <li><a target="_blank" rel="noopener noreferrer" href="http://kancelyarim.ru/">http://kancelyarim.ru/</a> - розничный магазин канцтоваров.
-      <li><a target="_blank" rel="noopener noreferrer" href="http://planeta35.ru/">http://planeta35.ru/</a> - оптовый магазин канцтоваров.
-      <li><a target="_blank" rel="noopener noreferrer" href="https://www.directmedia.ru/">https://www.directmedia.ru/</a> - магазин электронных книг.
-      <li><a target="_blank" rel="noopener noreferrer" href="http://www.ladyshopping.ru/">http://www.ladyshopping.ru/</a> - маркетплейс одежды для женщин.
-    </ul>
-
- </div>
-
-  <div class="row">
     <h2>Образование</h2>
-
     <ul>
-      <li>1999 - 2004 Ульяновский государственный университет, Факультет информационных и телекоммуникационных технологий. Специальность информационные системы, квалификация информатик</li>
+      <li>1999 &ndash; 2004 Ульяновский государственный университет, Факультет информационных и телекоммуникационных технологий. Специальность информационные системы, квалификация информатик</li>
     </ul>
-
   </div>
-
 
   <div class="row">
     <h2>Курсы, сертификаты</h2>
-
     <ul>
-      <li>2020 - 2021 (6 месяцев) Хороший программист <a href="https://goodprogrammer.ru/" target="_blank" rel="noopener noreferrer" >goodprogrammer.ru</a> Курс: Интенсив по Ruby on Rails </li>
-      <li>2010 - 2012  Волга-Днепр школа иностранных языков. Курс английский язык.</li>
+      <li>2020 &ndash; 2021 (6 месяцев) Хороший программист <a href="https://goodprogrammer.ru/" target="_blank" rel="noopener noreferrer" >goodprogrammer.ru</a> Курс: Интенсив по Ruby on Rails </li>
+      <li>2010 &ndash; 2012  Волга&ndash;Днепр школа иностранных языков. Курс английский язык.</li>
     </ul>
-
-
   </div>
 
-
 </div>
-
 
 </body>
 </html>
