Improve view of page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     </p>
 
     <h3>Навыки</h3>
-
     <ul>
       <li>Ruby, Ruby on Rails &ndash; написание, доработка учебных приложений</li>
       <li>MySql</li>
@@ -58,30 +57,22 @@
     </ul>
 
     <h3>Знания языков:</h3>
-
     <ul>
       <li>Русский &ndash; родной</li>
       <li>Английский &ndash; чтение документации</li>
     </ul>
 
-    <p>
-    Женат. Двое детей.
-    </p>
+    <p>Женат. Двое детей.</p>
 
-    <p>
-    Хобби: активный отдых, зож, велосипед.
-    </p>
+    <p>Хобби: активный отдых, зож, велосипед.</p>
   </div>
 
   <div class="row">
     <h2>Опыт работы в ИТ</h2>
     <p>Опыт работы ИТ более 15 лет.</p>
     <ul>
-      <li>Июль 2018 &ndash; по настоящее время. Элементс Платформ». <a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer"></a>
-        Создание и поддержка интернет магазинов.
-
-      </li>
-      <li>Январь 2006 &ndash; Июнь 2018 (12 лет и 6 месяцев) Паллант&ndash;Мобайл. Cоздание и поддержка интернет магазинов, маркетплейс, сервисов, справочников.</li>
+      <li>Июль 2018 &ndash; по настоящее время. &laquo;Элементс Платформ&raquo;. <a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer"></a> Создание и поддержка интернет магазинов;.</li>
+      <li>Январь 2006 &ndash; Июнь 2018 (12 лет и 6 месяцев) &laquo;Паллант Мобайл&raquo;. Cоздание и поддержка интернет магазинов, маркетплейс, сервисов, справочников.</li>
     </ul>
   </div>
 
