--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h2>Опыт работы в ИТ</h2>
     <p>Опыт работы ИТ более 15 лет.</p>
     <ul>
-      <li>Июль 2018 &ndash; по настоящее время. &laquo;Элементс Платформ&raquo;. <a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer"></a> Создание и поддержка интернет магазинов;.</li>
+      <li>Июль 2018 &ndash; по настоящее время. &laquo;Элементс Платформ&raquo;. <a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer"></a> Создание и поддержка интернет магазинов;</li>
       <li>Январь 2006 &ndash; Июнь 2018 (12 лет и 6 месяцев) &laquo;Паллант Мобайл&raquo;. Cоздание и поддержка интернет магазинов, маркетплейс, сервисов, справочников.</li>
     </ul>
   </div>
