add skills info

--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
 
     <h3>Навыки</h3>
     <ul>
-      <li>Ruby, Ruby on Rails &ndash; написание, доработка учебных приложений</li>
-      <li>MySql</li>
-      <li>PHP</li>
-      <li>JavaScript</li>
-      <li>jQuery</li>
-      <li>Git, Github, Bitbucket, Heroku</li>
-      <li>Nginx</li>
-      <li>Apache</li>
-      <li>Freebsd</li>
-      <li>Linux</li>
-      <li>Sphinx</li>
-      <li>HTML</li>
-      <li>CSS</li>
+      <li>Ruby &ndash; консольные программы на ruby</li>
+      <li>Ruby on Rails &ndash; создание и доработака приложение на Ruby on Rails</li>
+      <li>MySql &ndash; написание sql запросов, оптимизация sql запросов. Написание триггеров, хранимых процедур. Установка и настройка СУБД</li>
+      <li>PHP &ndash; написание web приложений, доработка функционала, написание консольных скриптов</li>
+      <li>JavaScript &ndash; использование в браузере, написание функций взаимодействия с пользователем</li>
+      <li>jQuery/Ajax &ndash; использование библиотеки для реализации эффектов, использование плагинов, ajax запросы</li>
+      <li>Git, Github, Bitbucket  &ndash;  использование git в работе. Ветки git. Совместная разработка приложений.</li>
+      <li>Heroku  &ndash;  деплой приложение на облачный сервис heroku.com</li>
+      <li>VPS  &ndash; настройка VPS,  деплой приложений на VPS</li>
+      <li>Nginx  &ndash; установка, настройка</li>
+      <li>Apache  &ndash; установка, настройка</li>
+      <li>Freebsd &ndash; установка приложений(ftp, apache, nginx, postfix, php, mysql), настройка, работа в консоли</li>
+      <li>Linux &ndash; установка приложений(nginx, postfix, ruby, pgsql), настройка, работа в консоли, работа в Gnome Ubuntu</li>
+      <li>Sphinx  &ndash;  установка, настройка, создание поисковых индексов, использоваие результатов поиска на в web приложениях на сайте</li>
+      <li>HTML, CSS  &ndash;  верстка страниц, интеграция готового дизайна в web приложения</li>
     </ul>
 
     <h3>Знания языков:</h3>
