--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Опыт работы в ИТ</h2>
     <p>Опыт работы ИТ более 15 лет.</p>
     <ul>
-      <li>Июль 2018 &ndash; по настоящее время. &laquo;Элементс Платформ&raquo;(<a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer">elementsplatform.com</a>). 
+      <li>Июль 2018 &ndash; по настоящее время &laquo;Элементс Платформ&raquo;(<a href="https://elementsplatform.com/" target="_blank" rel="noopener noreferrer">elementsplatform.com</a>). 
       Фулстек разработка и поддержка интернет магазинов. Взаимодействие с заказчиками для анализа и оценки требований, проектирование решений.
       </li>
       
@@ -49,7 +49,6 @@
     <h2>Портфолио</h2>
     <ul>
 
-    
       <li>
       <b>Наиболее интересные мои проекты с использованием технлогий html, css, js, php, mysql, smarty, sphinx, memcached, nginx:</b>
       </li>
