--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <ul>
 
       <li>
-      <b>Наиболее интересные мои проекты с использованием технлогий html, css, js, php, mysql, smarty, sphinx, memcached, nginx:</b>
+      <b>Наиболее интересные мои проекты с использованием технологий html, css, js, php, mysql, smarty, sphinx, memcached, nginx:</b>
       </li>
     
       <li><a target="_blank" rel="noopener noreferrer" href="https://shop.kp.ru/">https://shop.kp.ru/</a> &ndash; магазин книг Комсомольская правда.
