--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
       <li>Heroku  &ndash;  деплой приложение на облачный сервис heroku.com</li>
       
       <li><b>Иструменты совместной разработки:</b></li>      
-      <li>Git, Github, Bitbucket  &ndash;  использование git в работе. Ветки git. Совместная разработка приложений.</li>
+      <li>Git, Gitlab, Github, Bitbucket  &ndash;  использование git в работе. Ветки git. Совместная разработка приложений.</li>
       <li>Slack</li>
       <li>Skype</li>
+      <li>Jira</li>
       <li>Багтрекер</li>
       
     </ul>
