--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>Опыт работы в ИТ</h2>
     <p>Опыт работы ИТ более 15 лет.</p>
     <ul>
-      <li>Июль 2021 &ndash; настоящее время &laquo;Суточно.ру&raquo;(<a href="https://sutochno.ru/?marker=2261" target="_blank" rel="noopener noreferrer">sutochno.ru</a>). 
+      <li>Август 2021 &ndash; настоящее время &laquo;Суточно.ру&raquo;(<a href="https://sutochno.ru/?marker=2261" target="_blank" rel="noopener noreferrer">sutochno.ru</a>). 
       Бекенд разработик. Разработка серверной части функционала сервиса.
       </li>
       
