--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>Опыт работы ИТ более 15 лет.</p>
     <ul>
       <li>Август 2021 &ndash; настоящее время &laquo;Суточно.ру&raquo;(<a href="https://sutochno.ru/?marker=2261" target="_blank" rel="noopener noreferrer">sutochno.ru</a>). 
-      Бекенд разработик. Разработка серверной части функционала сервиса.
+      Бекенд разработчик. Разработка серверной части функционала сервиса.
       </li>
       
       
