--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="row">
     <h2>Опыт работы в ИТ</h2>
-    <p>Опыт работы ИТ более 15 лет.</p>
+    <p>Опыт в работы ИТ более 15 лет.</p>
     <ul>
       <li>Август 2021 &ndash; настоящее время &laquo;Суточно.ру&raquo;(<a href="https://sutochno.ru/?marker=2261" target="_blank" rel="noopener noreferrer">sutochno.ru</a>). 
       Бекенд разработчик. Разработка серверной части функционала сервиса.
